# rtdl

./: .gitignore  LICENSE  Makefile  README.md  environment.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  test_code_blocks.py
docs/: Makefile  blog.rst  conf.py  index.rst  rtdl.rst  rtdl_data.rst  spelling_wordlist.txt
docs/_static/: custom.css  versions.json
docs/_templates/: class.rst  layout.html
docs/reference/: rtdl.rst
examples/: rtdl.ipynb
lib/: __init__.py  data.py  deep.py  metrics.py  util.py
lib/node/: __init__.py  arch.py  nn_utils.py  utils.py
output/adult/autoint/tuned/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
output/adult/autoint/tuning/: 0.toml
output/adult/catboost/default/: 1.toml  2.toml  3.toml  4.toml  5.toml  7.toml  8.toml
output/adult/catboost/tuned/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
output/adult/dcn2/tuned/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
output/adult/dcn2/tuning/: 0.toml
output/adult/ft_transformer/default/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
output/adult/ft_transformer/tuned/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
output/adult/ft_transformer/tuning/: 0.toml
output/adult/grownet/tuned/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
output/adult/lightgbm_/tuned/: 10.toml  13.toml  14.toml  3.toml  4.toml  5.toml
output/adult/lightgbm_/tuning/: 0.toml
output/adult/mlp/tuned/: 1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
output/adult/mlp/tuning/: 0.toml
output/adult/node/tuned_old_format/: 11.toml  12.toml  13.toml  7.toml  8.toml
output/adult/resnet/tuned/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
output/adult/resnet/tuning/: 0.toml
output/adult/snn/tuned/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
output/adult/snn/tuning/: 0.toml
output/adult/tabnet/tuned/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
output/adult/tabnet/tuning/: 0.toml
output/adult/xgboost/default/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
output/adult/xgboost/tuned/: 0.toml  1.toml  10.toml  11.toml  12.toml  13.toml  14.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml  9.toml
output/aloi/autoint/tuned/: 0.toml  1.toml  11.toml  14.toml  2.toml  4.toml  9.toml
output/aloi/autoint/tuning/: 0.toml
output/aloi/catboost/default/: 0.toml  1.toml  11.toml  13.toml  3.toml  7.toml  9.toml
output/aloi/dcn2/tuned/: 10.toml  14.toml  2.toml  8.toml
output/aloi/ft_transformer/default/: 1.toml  11.toml  13.toml  5.toml  6.toml  9.toml
output/aloi/ft_transformer/tuned/: 10.toml  14.toml  2.toml  3.toml  5.toml  9.toml
output/aloi/ft_transformer/tuned_nobias/: 1.toml  10.toml  11.toml  12.toml  13.toml  2.toml  3.toml  4.toml  6.toml  7.toml
output/aloi/ft_transformer/tuning/: 0.toml  nobias.toml
output/aloi/mlp/tuned/: 1.toml  13.toml  2.toml  5.toml  6.toml  7.toml  9.toml
output/analysis_ft_transformer_vs_resnet/gbdt/: 1.toml
output/analysis_ft_transformer_vs_resnet/resnet/: 0.toml  2.toml  3.toml  4.toml
output/analysis_ft_transformer_vs_resnet/transformer/: 1.toml  4.toml
projects/num-embeddings/: .gitignore  README.md  pyproject.toml  requirements.txt
projects/num-embeddings/lib/: __init__.py  data.py  deep.py  env.py  metrics.py  util.py
projects/revisiting-models/: README.md
projects/revisiting-models/lib/: env.py  metrics.py  synthetic_data.py
rtdl/: __init__.py  _utils.py  data.py  functional.py  modules.py  optim.py
rtdl/experimental/: __init__.py  data.py
rtdl/nn/: __init__.py  _attention.py  _backbones.py  _embeddings.py  _models.py  _utils.py
rtdl/tests/: __init__.py  test_data.py  test_modules.py  test_vs_paper.py
(+28373 files in other folders)
