[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [
    {name = "rtdl authors", email = "strausmg@gmail.com"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "numpy >=1.18,<2",
    "scikit-learn >=1.0,<2",
    "torch >= 1.7,<2",
    "typing-extensions >= 4.0.1,<5",
]
dynamic = ["version", "description"]
keywords = [
    "artificial intelligence",
    "deep learning",
    "library",
    "python",
    "pytorch",
    "research",
    "torch",
]
license = {file = "LICENSE"}
name = "rtdl"
requires-python = ">=3.7"
urls = {Documentation = "https://Yura52.github.io/rtdl", Code = "https://github.com/Yura52/rtdl"}

[tool.black]
skip_string_normalization = true

[tool.coverage.run]
branch = true
omit = "rtdl/tests/*"
source = "rtdl"

[tool.flit.module]
name = "rtdl"

[tool.isort]
profile = "black"
multi_line_output = 3
known_first_party = ["rtdl"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rtdl.*.tests.*"
ignore_errors = true
