[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [{ name = "Yury Gorishniy" }]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["torch >=1.8,<3"]
dynamic = ["version", "description"]
keywords = [
    "artificial intelligence",
    "deep learning",
    "library",
    "python",
    "pytorch",
    "research",
    "torch",
    "tabular",
    "tabular data",
]
license = { file = "LICENSE" }
name = "rtdl"
requires-python = ">=3.8"

[project.urls]
Code = "https://github.com/yandex-research/rtdl"
Documentation = "https://github.com/yandex-research/rtdl"

[tool.black]
skip_string_normalization = true

[tool.flit.module]
name = "rtdl"

[tool.isort]
profile = "black"
multi_line_output = 3
known_first_party = ["rtdl"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
extend-select = ["RUF", "UP", "E101", "E501"]
target-version = "py38"

[tool.ruff.per-file-ignores]
"rtdl/_utils.py" = ["E501"]
"rtdl/data.py" = ["E501"]
"rtdl/modules.py" = ["E501"]
"rtdl/nn/*" = ["E501"]

[[tool.mypy.overrides]]
module = "rtdl.*.tests.*"
ignore_errors = true
